fixed body overflow, changed overall font family

--- a/src/styles/_user-variables.scss
+++ b/src/styles/_user-variables.scss
@@ -8,8 +8,15 @@
 //|   Fonts Families
 //-----------------------------------------------*/
 
-$font-family-sans-serif: Lato, 'Helvetica Neue', Arial, sans-serif,
-  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
-$font-family-serif: 'PT Serif', Times, 'Times New Roman', Georgia, serif !default;
-//$font-family-monospace: 'PT Mono', SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base: $font-family-serif !default;
+$native-font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+  'Segoe UI Symbol' !default;
+$font-family-sans-serif: 'PT Sans', $native-font-stack;
+$font-family-sans-serif-narrow: 'PT Sans Narrow', $native-font-stack;
+$font-family-base: $font-family-sans-serif !default;
+
+//*-----------------------------------------------
+//|   Fonts
+//-----------------------------------------------*/
+
+$headings-font-family: $font-family-sans-serif-narrow !default;
