--- a/src/styles/_user.scss
+++ b/src/styles/_user.scss
@@ -4,6 +4,11 @@
 //
 // Place your own sparrow CSS or SCSS rules below this line, these rules will override any Bootstrap and theme variables.
 
+// layout
+body {
+  overflow-x: hidden;
+}
+
 // nav
 .logo-nav {
   width: 2rem;
@@ -21,6 +26,7 @@
   overflow: hidden;
 }
 .fancynavbar-collapse {
+  transform: translate(100%, 0%) matrix(1, 0, 0, 1, 0, 0);
   transition: all 0.5s;
 
   &.open {
